Bug 487974 - Global shortcut for desktop grid not migrated
Summary: Global shortcut for desktop grid not migrated
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 6.0.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-03 17:16 UTC by Fabian Vogt
Modified: 2024-06-04 11:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2024-06-03 17:16:25 UTC
Before Plasma 6.0, I used Ctrl-F8 to get grid view showing all desktops and their windows. This is visible in kglobalshortcutsrc:

[kwin]
ShowDesktopGrid=Ctrl+F8,Meta+F8,Arbeitsflächen-Raster anzeigen

After upgrading to 6.0, this stopped working. Trying to assign Ctrl-F8 to some other effect causes an error message, saying that Ctrl-F8 is already in use by the desktop grid effect, which does not exist anymore.

FWICT it needs to be migrated to

Grid View=Ctrl+F8,Meta+G,Toggle Grid View
Comment 1 Bug Janitor Service 2024-06-04 09:45:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5827
Comment 2 Niccolò Venerandi 2024-06-04 10:20:09 UTC
Git commit a56b16e2ff304db3b209fe7f30ef42a1c0e6919a by Niccolò Venerandi.
Committed on 04/06/2024 at 10:09.
Pushed by niccolove into branch 'master'.

Remove orphan shortcuts for desktop grid and expose effects

M  +5    -0    kconf_update/CMakeLists.txt
A  +35   -0    kconf_update/kwin-6.1-remove-gridview-expose-shortcuts.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/a56b16e2ff304db3b209fe7f30ef42a1c0e6919a
Comment 3 Vlad Zahorodnii 2024-06-04 11:28:35 UTC
Git commit f283838dde96bfcbc7ccebb171c84cb11ee74d36 by Vlad Zahorodnii.
Committed on 04/06/2024 at 11:17.
Pushed by vladz into branch 'Plasma/6.1'.

Remove orphan shortcuts for desktop grid and expose effects


(cherry picked from commit a56b16e2ff304db3b209fe7f30ef42a1c0e6919a)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +5    -0    kconf_update/CMakeLists.txt
A  +35   -0    kconf_update/kwin-6.1-remove-gridview-expose-shortcuts.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/f283838dde96bfcbc7ccebb171c84cb11ee74d36