Remove orphan shortcuts for desktop grid and expose effects

BUG:487974